# ologit

./: ologit.Rmd  ologit.ipynb  ologit.nb.html  pyproject.toml
